Android First Time Experience (#259)
* android fte: locate android build tools

* android fte: find gradle

* android fte: resolve win32

* android fte: resolve macos

* android fte: resolve linux

* android fte: .android-rc io

* android fte: split search/get paths.

(Default search paths will be used as tool install locations)
Implement build tool uris()

* android fte: Implement prompts and path input

* androide fte: implement extract

* android fte: Implement command line tools dl

* android-fte: macos: fix lower and declare issues

* android fte: JAVA_HOME work

* android fte: gradle install

* android fte: Add support for local file repo

Enables faster testing cycle

* android fte: change to env file

Move read/write from android-functions.sh to functions.sh

* android fte: Improve process for preexisting paths

* android fte: integrate with build process

* android fte: resolve some mac issues

* android fte: cli.cc uses .ssc.env

* android fte: copy .ssc.env to $SOCKET_HOME

* cli.cc always build jniLibs on first build

* android fte: Get yes|--licenses working

* android fte: android-functions.sh --android-fte

To be used in non install.sh environments, eg under npm

* win32 npm: resolve file copy regression

* android fte: logging

* android fte: fix var declarations, +local

* android fte: fix $host used, no longer set
globally

* android fte: further $host fixes

* android fte: fix log path

* android fte: fix export variables
shouldn't be declared local

* android-fte: ubuntu: fixes

* bootstrap android:  ssc.env support

+ better error handling when android scripts aren't located

* bootstrap android: Fix async pattern

* run test:android: fix windows

+ fix adb not in path

* run test:android: fix macos

* android fte: macos: fix tar root folder parsing

* android fte: macos: handle os tar jdk path

+ fix JAVA_HOME points to invalid javac, unset

* test:androi